# EbfData

./: README.md  pyproject.toml
resources/docs/: Conventions.docx  Current Excel Workflow.docx  Short Calls.docx  Tables.xlsx  VBA Execution.docx
resources/scenarios/: snapshot SCs.xlsx
resources/testing/: testing.xlsx  xlBaseTester.xlsx
resources/udfs/: UDF Tester.xlsm
src/ebf_data/: xlTableBase.py
src/ebf_data/commands/: update_prices.py
src/ebf_data/excel/: cagr_reader.py  excel_book_finder.py  globals.py  xlTableBase.py
src/ebf_data/excel/cagr/: cagr_table.py
src/ebf_data/excel/infrastructure/: scenario_workbook.py  (+5 more)
src/ebf_data/orchestrators/: opex_processor.py  symbol_translator.py
tests/excel/: test_cagr_reader.py  test_excel_book_finder.py  test_globals.py
tests/excel/cagr/: test_cagr_reader.py  test_cagr_table.py  test_close_trade.py
tests/excel/infrastructure/: scenario_workbook.py  test_excel_book_finder.py  test_scenario_workbook.py  test_update_slice.py  test_xl_base_tester.py  xl_base_tester.py  xl_test_scenario.py
tests/excel/orchestrators/: test_close_trade_in_cagr.py  test_find_match.py  test_opex_clears_snapshot.py  test_opex_processor.py  test_parse_premium.py  test_symbol_translator.py
tests/excel/pricing/: pricing_scenarios.py  pricing_tester.py  test_snapshot_pricing.py
tests/excel/snapshot/: test_clear_short_call_columns.py  test_snapshot_reader.py  test_snapshot_table.py
tests/orchestrators/: test_find_match.py  test_opex_clears_snapshot.py  test_opex_processor.py  test_parse_premium.py  test_symbol_translator.py
(+15 files in other folders)
